# XfCapture

./: .editorconfig  .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  README.html  README.md  Snakefile  config.yaml  pyproject.toml  run_pipeline.sh  setup.py  xf_capture.py
envs/: R_tools.yaml  extract_genes.yaml  fastp.yaml  kraken2.yaml  mapping.yaml  mlst.yaml  phylogeny.yaml  r_tools.yaml  recentrifuge.yaml
reference_seqs/: probes.fasta  probes_mlst.fasta
reference_seqs/xf_genomes/: 11399.fna  3124.fna  32.fna  50066.fna  50080.fna  6c.fna  9a5c.fna  ALM4.fna  AM2-Angelina.fna  ATCC35873.fna  ATCC35874.fna  ATCC35879.fna  Alm_Lz_1.fna  AlmaEM3.fna  AlmaReb2.fna  Ann-1.fna  B111.fna  BB01.fna  BB08-1.fna  BBI64.fna  Bakersfield-1.fna  CFBP13585.fna  CFBP13591.fna  CFBP13631.fna  CFBP7970.fna  CFBP8068.fna  CFBP8070.fna  CFBP8071.fna  CFBP8072.fna  CFBP8073.fna  CFBP8075.fna  CFBP8082.fna  CFBP8083.fna  CFBP8351.fna  CFBP8356.fna  CFBP8418.fna  CFBP8431.fna  CFBP8433.fna  CFBP8478.fna  CO33.fna  (+74 more)
src/xf_capture/: cli.py  common.py  runner.py  setup.py
src/xf_capture/utils/: __init__.py  auxiliar_functions.py  plot_tree.R  reconstruction_summary.R
src/xf_capture/workflows/: Snakefile
src/xf_capture/workflows/envs/: mapping.yaml  mlst.yaml  qc.yaml  taxa-classification.yaml
utils/: auxiliar_functions.py  plot_tree.R
